# fry-tftp-server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
benches/: packet_bench.rs
src/: main.rs
src/core/: buffer_pool.rs  i18n.rs  ipc.rs  log_buffer.rs  mod.rs  state.rs
src/core/config/: mod.rs
src/core/fs/: mod.rs
src/core/net/: mod.rs
src/core/protocol/: packet.rs
src/core/session/: mod.rs
src/gui/: app.rs  mod.rs  theme.rs  tray.rs
src/gui/tabs/: acl_tab.rs  config_tab.rs  dashboard.rs  files.rs  help_tab.rs  log_tab.rs  transfers.rs
src/headless/: mod.rs
src/platform/: mod.rs  unix.rs  windows.rs  windows_eventlog.rs  windows_service.rs
src/tui/: app.rs
tests/common/: tftp_client.rs
tests/integration/: basic_rrq.rs
