[package]
name = "fry-tftp-server"
version = "1.0.2"
edition = "2021"
rust-version = "1.75"
description = "Fry TFTP Server — cross-platform high-performance TFTP server"
license = "MIT"
repository = "https://github.com/qulisun/fry-tftp-server"
homepage = "https://github.com/qulisun/fry-tftp-server"
keywords = ["tftp", "server", "networking", "pxe"]
categories = ["network-programming", "command-line-utilities"]

[package.metadata.deb]
maintainer = "Viacheslav Gordeev"
copyright = "2026, Viacheslav Gordeev"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/fry-tftp-server", "usr/local/bin/", "755"],
    ["deploy/fry-fry-tftp-server.service", "lib/systemd/system/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/fry-tftp-server", dest = "/usr/local/bin/fry-tftp-server", mode = "755" },
    { source = "deploy/fry-fry-tftp-server.service", dest = "/lib/systemd/system/fry-tftp-server.service", mode = "644" },
]

[dependencies]
# === Core (always compiled) ===
tokio = { version = "1", features = ["full"] }
socket2 = "0.5"
bytes = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ipnet = "2"
arc-swap = "1"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tokio-util = "0.7"
serde_json = "1"
memmap2 = "0.9"

# === GUI (optional) ===
eframe = { version = "0.31", optional = true }
png = { version = "0.17", optional = true }
egui = { version = "0.31", optional = true }
egui_plot = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }
tray-icon = { version = "0.19", optional = true }
arboard = { version = "3", optional = true }

# === TUI (optional) ===
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# === Platform-specific ===
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "fs", "net", "resource"] }
tracing-journald = "0.3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Networking_WinSock",
    "Win32_System_Pipes",
    "Win32_System_EventLog",
    "Win32_Foundation",
    "Win32_Security",
] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["gui", "tui"]
gui = ["dep:eframe", "dep:egui", "dep:egui_plot", "dep:rfd", "dep:tray-icon", "dep:arboard", "dep:png"]
tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "fry-tftp-server"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/basic_rrq.rs"

[[bench]]
name = "packet_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false

